prevent buttons from jumping due to tooltip shown

--- a/gui/default/assets/css/overrides.css
+++ b/gui/default/assets/css/overrides.css
@@ -574,13 +574,11 @@ html[lang|="ko"] i {
     font-style: normal;
 }
 
-/* Prevent buttons from jumping when a tooltip is shown for one of them. */
+/* Prevent buttons from jumping up and down
+   when a tooltip is shown for one of them. */
 .btn-group-vertical > .tooltip + .btn,
 .btn-group-vertical > .tooltip + .btn-group {
     margin-top: -1px;
-}
-.modal-footer .btn-group .tooltip + .btn {
-    margin-left: -1px;
 }
 
 .select-on-click {
